--- a/windows/AboutThisPC/Resources.resw
+++ b/windows/AboutThisPC/Resources.resw
@@ -118,9 +118,29 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="eye-dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Assets\icons\eye-solid-full-dark.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <comment>Eye open (black)</comment>
+  </data>
+  <data name="eye-light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Assets\icons\eye-solid-full-light.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <comment>Eye open (white)</comment>
+  </data>
+  <data name="eye-slash-dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Assets\icons\eye-slash-solid-full-dark.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <comment>Eye slashed (black)</comment>
+  </data>
+  <data name="eye-slash-light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Assets\icons\eye-slash-solid-full-light.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <comment>Eye slashed (white)</comment>
+  </data>
   <data name="laptop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Assets\computers\laptop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     <comment>Laptop image from Computers</comment>
+  </data>
+  <data name="monitor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Assets\computers\monitor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>Monitor image from Computers</comment>
   </data>
   <data name="windows10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Assets\Windows\windows10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
